# gameboy

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt  Cargo.toml
core/src/: bus.rs  cartridge.rs  cpu.rs  ffi.rs  interrupts.rs  lib.rs  rom.rs  serial.rs  timer.rs  video.rs
emulator/: CMakeLists.txt  core.cpp  core.hpp  main.cpp  main_window.cpp  main_window.hpp
